refactored and reorganized files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,15 +4,15 @@ project(feature-selection-ai)
 ADD_SUBDIRECTORY(googletest)
 
 ADD_EXECUTABLE(featureSelection
-    src/main.cpp
+    main.cpp
 )
 
 ADD_EXECUTABLE(test
     tests/test.cpp
-	tests/nearestneighbortests.cpp
+	tests/featureselectiontests.cpp
 	tests/loadtests.cpp
-	src/nearestneighbor.cpp
 	src/load.cpp
+	src/featureselection.cpp
 )
 
 TARGET_LINK_LIBRARIES(test gtest)
